[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -249.165, -532.162, 0, 0, 0, 0, 225.969, -530.934, 0, 0, 0, 0, 225.969, 183.609, 0, 0, 0, 0, -249.165, 182.381, 0, 0, 0, 0, -249.165, -532.162 )
}
_sections_unfolded = [ "Resource" ]

[node name="Main" type="Node"]

script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 485.0
margin_bottom = 724.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.406952, 0.51998, 0.820313, 1 )
_sections_unfolded = [ "Margin" ]

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 240, 450 )

[node name="MobTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTImer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="StartPosition" type="Position2D" parent="." index="5"]

position = Vector2( 248.003, 534.066 )

[node name="MobPath" type="Path2D" parent="." index="6"]

position = Vector2( 248.003, 534.066 )
curve = SubResource( 1 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( -249.165, -532.162 )
rotation = 0.0026001
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="HUD" parent="." index="7" instance=ExtResource( 4 )]

[node name="DeathSound" type="AudioStreamPlayer" parent="." index="8"]

stream = null
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Music" type="AudioStreamPlayer" parent="." index="9"]

stream = null
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="hit" from="Player" to="." method="game_over"]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="timeout" from="ScoreTImer" to="." method="_on_ScoreTImer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="start_game" from="HUD" to="." method="new_game"]


